<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >
        <TextView
            android:id="@+id/l_alert_interval"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/l_alert_interval"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
                android:id="@+id/tv_alert_interval"
                android:gravity="left"
                android:layout_width="0dip"
                android:textColor="#00FF00"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_interval"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="30"
            android:padding="5dp"
            android:progress="7" />
        <TextView
            android:id="@+id/l_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_pattern"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_curr_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#00FF00"
            android:textSize="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/b_start_ex"
            android:layout_width="189dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/b_start_ex"
            android:onClick="onStartExperimentButtonClick"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>